deploy/kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plantuml
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: plantuml
  type: ClusterIP
